--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/css?family=Lato:300:400);
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
 
 body {
   margin:0;
@@ -12,18 +12,20 @@ h1 {
 }
 
 span{
-  font-family: 'Inter', sans-serif;
+  font-family: 'Lato', sans-serif;
+  font-weight: 500;
   letter-spacing: 1px;
   font-size: 18px;
   color: #7a7a7a !important;
 }
 
 h2{
-  font-family: 'Inter', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 32px;
-  font-weight: lighter;
+  font-weight: 400;
 
-  background: linear-gradient(60deg, #503FB7, #04A7C0);
+  background: linear-gradient(60deg, #2C11D1, #04C0A6);
+
   background-clip: text;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -32,7 +34,7 @@ h2{
 }
 
 p {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Lato', sans-serif;
   letter-spacing: 1px;
   /* text-align: center; */
   font-weight: lighter;
