H2 text color updated

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ h2{
   font-size: 32px;
   font-weight: 400;
 
-  background: linear-gradient(60deg, #2C11D1, #04C0A6);
+  background: linear-gradient(60deg, #0D3EFB, #D500C8);
 
   background-clip: text;
   -webkit-background-clip: text;
