--- a/styles.css
+++ b/styles.css
@@ -1,82 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
 
 body {
-  margin:0;
-}
-
-h1 {
-  font-family: 'Lato', sans-serif;
-  font-weight:300;
-  letter-spacing: 2px;
-  font-size:48px;
-  color: blueviolet;
-}
-
-span{
-  font-family: 'Lato', sans-serif;
-  font-weight: 500;
-  letter-spacing: 1px;
-  font-size: 18px;
-  color: #7a7a7a !important;
-}
-
-h2{
-  font-family: 'Lato', sans-serif;
-  font-size: 32px;
-  font-weight: 400;
-
-  background: linear-gradient(60deg, #0D3EFB, #D500C8);
-
-  background-clip: text;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -moz-text-fill-color: transparent;
-  -webkit-text-fill-color: transparent;
-}
-
-p {
-  font-family: 'Lato', sans-serif;
-  letter-spacing: 1px;
-  /* text-align: center; */
-  font-weight: lighter;
-  font-size:24px;
-  color: #7a7a7a;
-}
-
-
-
-.header {
-  position: relative;
-text-align: center;
-background: linear-gradient(60deg, rgb(180, 231, 255) 0%, rgb(229, 212, 255) 100%);
-color: white;
-}
-.logo {
-  width:50px;
-  fill:white;
-  padding-right:15px;
-  display:inline-block;
-  vertical-align: middle;
-}
-
-.inner-header {
-  height:65vh;
-  width:100%;
-  margin: 0;
-  padding: 0;
-}
-
-.flex { /*Flexbox for containers*/
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
- 
-}
-
-lottie-player{
-  width: 500px;
-  height: 500px;
+  box-sizing: border-box;
 }
 
 .waves {
@@ -88,12 +13,6 @@ lottie-player{
   max-height:150px;
 }
 
-.content {
-  position:relative;
-  height:20vh;
-  text-align:center;
-  background-color: white;
-}
 
 /* Animation */
 
@@ -124,33 +43,13 @@ lottie-player{
     transform: translate3d(85px,0,0);
   }
 }
+
+
+
 /*Shrinking for mobile*/
 @media (max-width: 768px) {
   .waves {
     height:40px;
     min-height:40px;
-  }
-  .content {
-    height:30vh;
-  }
-  h1 {
-    font-size:24px;
-  }
-
-  h2{
-    font-size: 18px;
-  }
-
-  p{
-    font-size: 14px;
-  }
-
-  .flex{
-    flex-direction: column;
-  }
-
-  lottie-player{
-    width: 300px;
-    height: 300px;
   }
 }
