--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,86 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap');
+
 
 body {
-  box-sizing: border-box;
+  margin:0;
+  padding: 0;
 }
+
+h1 {
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight:300;
+  letter-spacing: 2px;
+  font-size:48px;
+}
+
+p {
+  font-family: 'Inter', sans-serif;
+  letter-spacing: 1px;
+  font-size:14px;
+  color: #333333;
+}
+
+
+.navbar{
+}
+
+.navbar ul{
+  display: flex;
+justify-content: space-evenly;
+}
+
+.navbar ul li{
+  list-style-type: none;
+}
+
+.navbar ul li a{
+  text-decoration: none;
+  color: #222222;
+  font-family: 'Josefin Sans', sans-serif;
+  color: #FAFAFA;
+}
+
+header{
+  background: linear-gradient(60deg, #cc208e  0%, #6713d2 100%);
+  color:white;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+header h4{
+  margin: 0 auto;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-size: 1rem;
+  color:#FAFAFA ;
+}
+
+.TextContainer{
+  /* border: 2px solid black; */
+display: grid;
+grid-template-columns: 10fr 20fr;
+align-items: baseline;
+padding-top: 2rem;
+}
+
+
+.HeroContainer{
+  display: flex;
+flex-direction: row;
+justify-content: space-evenly;
+align-items: center;
+}
+
+
+/* .inner-header {
+  height:5vh;
+  width:100%;
+  margin: 0;
+  padding: 0;
+} */
+
+
 
 .waves {
   position:relative;
@@ -43,13 +121,16 @@ body {
     transform: translate3d(85px,0,0);
   }
 }
-
-
-
 /*Shrinking for mobile*/
 @media (max-width: 768px) {
   .waves {
     height:40px;
     min-height:40px;
+  }
+  .content {
+    height:30vh;
+  }
+  h1 {
+    font-size:24px;
   }
 }
