--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap');
 
+:root{
+  --primary-color: rgb(103, 19, 210);
+  --secondary-color: rgb(204, 32, 142);
+  --gradient: linear-gradient(60deg, #cc208e  0%, #6713d2 100%);
+}
+
 
 body {
   margin:0;
@@ -41,7 +47,7 @@ justify-content: space-evenly;
 }
 
 header{
-  background: linear-gradient(60deg, #cc208e  0%, #6713d2 100%);
+  background: var(--gradient);
   color:white;
   margin-top: 0;
   margin-bottom: 0;
@@ -71,6 +77,7 @@ flex-direction: row;
 justify-content: space-evenly;
 align-items: center;
 }
+
 
 
 /* .inner-header {
@@ -133,4 +140,19 @@ align-items: center;
   h1 {
     font-size:24px;
   }
+
+  .TextContainer{
+    display: grid;
+grid-template-rows: 10fr 20fr;
+align-items: baseline;
+padding-top: 2rem;
+  }
+
+
+
+  .navbar ul{
+    display: flex;
+    flex-direction: column;
+  }
+
 }
