--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap');
 
 :root{
-  --primary-color: rgb(103, 19, 210);
-  --secondary-color: rgb(204, 32, 142);
-  --gradient: linear-gradient(60deg, #cc208e  0%, #6713d2 100%);
+  --primary-color: #6714d2;
+  --secondary-color: #b05cef;
+  --gradient: linear-gradient(60deg, var(--primary-color)  0%, var(--secondary-color) 100%);
+
+  --text-primary: #1A1A1A;
+  --text-primary-light: #808080;
+
+  --text-secondary: #FAFAFA; 
+
 }
 
 
@@ -12,18 +18,35 @@ body {
   padding: 0;
 }
 
+*{
+  color:var(--text-primary);
+}
+
+body::-webkit-scrollbar {
+  width: 0.50rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--text-primary);
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--primary-color);
+}
+
 h1 {
   font-family: 'Josefin Sans', sans-serif;
   font-weight:300;
   letter-spacing: 2px;
   font-size:48px;
+  color: var(--text-primary);
 }
 
 p {
   font-family: 'Inter', sans-serif;
   letter-spacing: 1px;
   font-size:14px;
-  color: #333333;
+  color: var(--text-primary-light);
 }
 
 
@@ -41,14 +64,12 @@ justify-content: space-evenly;
 
 .navbar ul li a{
   text-decoration: none;
-  color: #222222;
   font-family: 'Josefin Sans', sans-serif;
-  color: #FAFAFA;
+  color: var(--text-secondary);
 }
 
 header{
   background: var(--gradient);
-  color:white;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -59,7 +80,7 @@ header h4{
   font-weight: 600;
   letter-spacing: 2px;
   font-size: 1rem;
-  color:#FAFAFA ;
+  color: var(--text-secondary);
 }
 
 .TextContainer{
@@ -68,6 +89,7 @@ display: grid;
 grid-template-columns: 10fr 20fr;
 align-items: baseline;
 padding-top: 2rem;
+text-shadow: 0px 0px 20px var(--text-primary);
 }
 
 
@@ -86,6 +108,17 @@ align-items: center;
   margin: 0;
   padding: 0;
 } */
+
+
+
+
+
+
+
+
+
+
+
 
 
 
