--- a/styles.css
+++ b/styles.css
@@ -268,8 +268,12 @@ text-shadow: 0px 0px 20px var(--text-primary);
 }
 
 
+br{
+border: 4px solid red;
+}
 
 .navbar-bottom{
+
   position: fixed;
   bottom: 0;
   
@@ -279,6 +283,9 @@ text-shadow: 0px 0px 20px var(--text-primary);
   left: 0;
   margin-bottom: 0;
   padding-bottom: 0;
+
+  background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
+
 }
 
 .navbar-bottom ul{
@@ -289,7 +296,7 @@ text-shadow: 0px 0px 20px var(--text-primary);
 
 
 .navbar-bottom li a{
-  padding:2rem;
+  /* padding:2rem; */
 }
 
 .navbar-bottom li a span{
@@ -315,7 +322,11 @@ text-align:center;
 }
 
 .fas{
-  color: #FAFAFA;
+  color:var(--text-secondary);
+}
+
+.fas:hover{
+  color: #D5B9F8;
 }
 
 /* Remove this later */
