--- a/styles.css
+++ b/styles.css
@@ -289,14 +289,15 @@ border: 4px solid red;
 }
 
 .navbar-bottom ul{
-  
-  padding-left: 0;
+  padding-left: 0;  
 }
 
 
 
+
 .navbar-bottom li a{
-  /* padding:2rem; */
+  width: 2rem;
+  height: 2rem;
 }
 
 .navbar-bottom li a span{
@@ -305,12 +306,7 @@ border: 4px solid red;
 
 .navbar-bottom ul li a i{
   display: inline-block;
-}
-
-.navbar-bottom img{
-  height: 2rem;
-  width: 2rem;
-  
+  font-size: 1.2rem;
 }
 
 .link-text{
