--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Josefin+Sans:wght@100;200;300;400;500;600;700&display=swap');
 
 :root{
+  --font-primary: 'Inter', sans-serif;
+  --font-secondary: 'Josefin Sans',sans-serif;
+
   --primary-color: #6714d2;
   --secondary-color: #b05cef;
   --gradient: linear-gradient(60deg, var(--primary-color)  0%, var(--secondary-color) 100%);
@@ -16,6 +19,10 @@
 body {
   margin:0;
   padding: 0;
+}
+
+body::first-letter{
+  text-transform: capitalize;
 }
 
 *{
@@ -113,15 +120,17 @@ text-shadow: 0px 0px 20px var(--text-primary);
 
 .HeroContainer{
   display: flex;
-flex-direction: row;
+flex-direction: row-reverse;
 justify-content: space-evenly;
 align-items: center;
+margin: 2rem auto;
 }
 
 .HeroText p{
   font-size: 1.25rem;
   margin: 1rem 0;
-  font-weight: 300;
+  font-weight: 400;
+  font-family: var(--font-secondary);
 }
 
 .HeroText span{
@@ -237,7 +246,7 @@ lottie-player{
     height:30vh;
   }
   h1 {
-    font-size:1.5rem;
+    font-size:2rem;
   }
 
   .HeroContainer{
@@ -258,6 +267,7 @@ text-shadow: 0px 0px 20px var(--text-primary);
 }
 
 
+
   .HeroText {
     text-align: center;
 }
@@ -267,10 +277,6 @@ text-shadow: 0px 0px 20px var(--text-primary);
     margin: 0.5rem 0;
 }
 
-
-br{
-border: 4px solid red;
-}
 
 .navbar-bottom{
 
