margin-bottom for heroimage adjusted for mobile-view.

--- a/styles.css
+++ b/styles.css
@@ -296,6 +296,10 @@ align-items: center;
     height: auto;
 }
 
+.HeroImage {
+  margin-bottom: 3rem;
+}
+
 .TextContainer{
   display: block;
   padding: 2rem;
