--- a/styles.css
+++ b/styles.css
@@ -289,7 +289,8 @@ lottie-player{
     flex-direction: column;
 justify-content: center;
 align-items: center;
-  }
+margin: auto;
+}
 
   lottie-player {
     width: 100%;
