--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
 
 *{
   color:var(--text-primary);
+  font-family: var(--font-primary);
 }
 
 *::first-letter{
@@ -60,6 +61,10 @@ h1 {
   letter-spacing: 2px;
   font-size:3rem;
   color: var(--text-primary);
+}
+
+h2,h3{
+  font-family: var(--font-secondary);
 }
 
 p {
@@ -126,13 +131,17 @@ padding-top: 2rem;
 text-shadow: 0px 0px 20px var(--text-primary);
 }
 
+#Hero{
+
+}
 
 .HeroContainer{
   display: flex;
-flex-direction: row-reverse;
-justify-content: space-evenly;
-align-items: center;
-margin: 5rem auto;
+  flex-direction: row-reverse;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: auto;
+width: 80%;
 }
 
 .HeroText p{
@@ -186,6 +195,60 @@ lottie-player{
   padding: 0.7rem;
   font-size: 1rem;
 }
+
+
+/* *******************
+   Service Section Starts
+   ******************* */
+   #Services {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    /* border: 2px solid red; */
+}
+
+.ServicesContainer {
+  /* border: 2px solid green; */
+  width: 80%;
+}
+
+#Services h2 {
+  width: 80%;
+}
+
+.ServicesCardContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr) );
+}
+
+.ServicesCard {
+  /* border: 2px solid black; */
+width: 60%;
+box-shadow: 0 4px 8px 0 rgba(194, 179, 179, 0.7);
+padding: 1rem;
+border-radius: 0.5rem;
+}
+
+.ServicesCard img{
+  /* border: 2px solid black; */
+}
+
+.ServicesCardText {
+ 
+}
+
+
+
+
+
+/* *******************
+   Service Section Ends
+   ******************* */
+
+
+
+
 
 
 /* Remove this later */
